2010-09-27  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* Fldstat2: replace macros FDIV and FSORT by function calls DIV and SORT
	
2010-09-20  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* New module: Ydayarith (ydayadd, ydaysub, ydaymul, ydaydiv)

2010-09-17  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* using CDI library version 1.4.6
	* Version 1.4.6 released

2010-09-07 Ralf Mueller <ralf.mueller@zmaw.de>

	* using libtool for linking (rpath)
	* include libcdi as subproject
	* eca_gsl: adjust implementation to fit definition by ECA [report: Stefan Fronzek]
	* eca_gsl: make useable in pipes (bug fix) [report: Stefan Fronzek]

2010-08-26  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* sellevel: copy zaxis meta data name and units (bug fix) [report: Don Murray]
	
2010-08-20  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

        * pstreamDefTimestep: removed call to streamSync (very slow on GPFS)

2010-08-05  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* changed percentile parameter type from integer to float [request: Nikolaus Groll]
	
2010-08-03  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* changed predefined gaussian grid names from t<RES>grid to n<N>
	
2010-08-02  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* added grid mask support
	
2010-07-30  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* sellonlatbox: the last lon index is sometimes incorrect (bug fix) [report:Flore Mounier]
	
2010-07-22  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* Module Expr: added missing value support [request: Marco van Hulten]

2010-07-13  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* gridFromNCfile: check grid_dims
	* seldate: open output file only when time steps found (bug fix) [report: Hannes Reuter]

2010-07-12  Cedrick Ansorge <Cedrick.Ansorge@zmaw.de>

	* Added module Filter - Time series filtering

2010-07-05  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* Version 1.4.5.1 released

2010-07-05 Edi Kirk <E.Kirk@gmx.de>
